ADD_SUBDIRECTORY(assign5)
ADD_SUBDIRECTORY(clouds)
ADD_SUBDIRECTORY(cube)
ADD_SUBDIRECTORY(fog)
ADD_SUBDIRECTORY(gpu_cloth)
#ADD_SUBDIRECTORY(dromenormal)
ADD_SUBDIRECTORY(freealut)
ADD_SUBDIRECTORY(itemsystem)
ADD_SUBDIRECTORY(kore)
ADD_SUBDIRECTORY(l01)
ADD_SUBDIRECTORY(l02)
ADD_SUBDIRECTORY(l03)
ADD_SUBDIRECTORY(l04)
ADD_SUBDIRECTORY(l05)
ADD_SUBDIRECTORY(l06)
ADD_SUBDIRECTORY(l07)
ADD_SUBDIRECTORY(l08)
ADD_SUBDIRECTORY(l09)
ADD_SUBDIRECTORY(l10)
ADD_SUBDIRECTORY(l11)
ADD_SUBDIRECTORY(l12)
ADD_SUBDIRECTORY(l13)
ADD_SUBDIRECTORY(l16)
ADD_SUBDIRECTORY(l17)
ADD_SUBDIRECTORY(l18)
ADD_SUBDIRECTORY(l19)
ADD_SUBDIRECTORY(l20)
ADD_SUBDIRECTORY(lesson03)
ADD_SUBDIRECTORY(lesson14)
#ADD_SUBDIRECTORY(lesson15)
#ADD_SUBDIRECTORY(lesson38)
#ADD_SUBDIRECTORY(lesson47)
ADD_SUBDIRECTORY(lua_simple)
ADD_SUBDIRECTORY(oglut1)
ADD_SUBDIRECTORY(oglut2)
ADD_SUBDIRECTORY(oglut3)
ADD_SUBDIRECTORY(oglut4)
#ADD_SUBDIRECTORY(oglut5)
ADD_SUBDIRECTORY(opengl_logo)
#ADD_SUBDIRECTORY(rainbow)
ADD_SUBDIRECTORY(rollercaster)
ADD_SUBDIRECTORY(underwater)
ADD_SUBDIRECTORY(walker)