SET (CMAKE_BUILD_TYPE Debug)
ADD_SUBDIRECTORY(assign5)
#ADD_SUBDIRECTORY(blending)
ADD_SUBDIRECTORY(buffer_benchmark)
#ADD_SUBDIRECTORY(bumpmapping)
ADD_SUBDIRECTORY(cellshading)
ADD_SUBDIRECTORY(clothsim)
ADD_SUBDIRECTORY(clouds)
ADD_SUBDIRECTORY(cube)
#ADD_SUBDIRECTORY(envmap)
ADD_SUBDIRECTORY(fog)
#ADD_SUBDIRECTORY(frustum_culling)
ADD_SUBDIRECTORY(gpu_cloth)
#ADD_SUBDIRECTORY(gpufire)
#ADD_SUBDIRECTORY(dromenormal)
ADD_SUBDIRECTORY(itemsystem)
ADD_SUBDIRECTORY(hammar)
#ADD_SUBDIRECTORY(keepers)
ADD_SUBDIRECTORY(kore)
ADD_SUBDIRECTORY(l03)
ADD_SUBDIRECTORY(l04)
ADD_SUBDIRECTORY(l05)
ADD_SUBDIRECTORY(l06)
ADD_SUBDIRECTORY(l07)
ADD_SUBDIRECTORY(l08)
ADD_SUBDIRECTORY(l09)
ADD_SUBDIRECTORY(l10)
ADD_SUBDIRECTORY(l11)
ADD_SUBDIRECTORY(l12)
ADD_SUBDIRECTORY(l13)
ADD_SUBDIRECTORY(l16)
ADD_SUBDIRECTORY(l17)
ADD_SUBDIRECTORY(l18)
ADD_SUBDIRECTORY(l19)
ADD_SUBDIRECTORY(l20)
ADD_SUBDIRECTORY(l21)
ADD_SUBDIRECTORY(l22)
ADD_SUBDIRECTORY(l23)
ADD_SUBDIRECTORY(l24)
ADD_SUBDIRECTORY(l25)
ADD_SUBDIRECTORY(l28)
ADD_SUBDIRECTORY(l29)
#ADD_SUBDIRECTORY(l30)
#ADD_SUBDIRECTORY(l31)
ADD_SUBDIRECTORY(l32)
ADD_SUBDIRECTORY(l33)
ADD_SUBDIRECTORY(l34)
#ADD_SUBDIRECTORY(l35)
ADD_SUBDIRECTORY(l36)
ADD_SUBDIRECTORY(l37)
ADD_SUBDIRECTORY(l39)
ADD_SUBDIRECTORY(l40)
ADD_SUBDIRECTORY(l41)
ADD_SUBDIRECTORY(l42)
ADD_SUBDIRECTORY(l45)
#ADD_SUBDIRECTORY(l47)
ADD_SUBDIRECTORY(lesson03)
ADD_SUBDIRECTORY(lesson14)
#ADD_SUBDIRECTORY(lesson15)
#ADD_SUBDIRECTORY(lesson38)
#ADD_SUBDIRECTORY(lesson47)
ADD_SUBDIRECTORY(lua_simple)
ADD_SUBDIRECTORY(oglut1)
ADD_SUBDIRECTORY(oglut2)
ADD_SUBDIRECTORY(oglut3)
ADD_SUBDIRECTORY(oglut4)
#ADD_SUBDIRECTORY(oglut5)
ADD_SUBDIRECTORY(opengl_logo)
ADD_SUBDIRECTORY(q3bsp)
ADD_SUBDIRECTORY(quin)
#ADD_SUBDIRECTORY(rainbow)
ADD_SUBDIRECTORY(rollercaster)
ADD_SUBDIRECTORY(underwater)
ADD_SUBDIRECTORY(walker)