FIND_PACKAGE(MySQL REQUIRED)
FIND_PACKAGE(CRYPTOPP REQUIRED)
FIND_PACKAGE(MYSQLPP REQUIRED)
FIND_PACKAGE(LibXml2 REQUIRED)
FIND_PACKAGE(LibEvent REQUIRED)
FIND_PACKAGE( Boost 1.36.0 COMPONENTS regex )

#ADD_SUBDIRECTORY(service)

INCLUDE_DIRECTORIES(
    ${CMAKE_CURRENT_SOURCE_DIR}
    ${CMAKE_CURRENT_SOURCE_DIR}/include
    ${CMAKE_CURRENT_SOURCE_DIR}/game/include
    ${CMAKE_CURRENT_SOURCE_DIR}/engine/include
    ${CMAKE_CURRENT_SOURCE_DIR}/math/include
    ${MYSQL_INCLUDE_DIR}
    ${MYSQLPP_INCLUDE_DIR}
    ${LIBXML2_INCLUDE_DIR}
    )

SET (LIBRARY ngx)

SET(LIBRARY_SRCS
    Engine.cpp
    View.cpp
    Video.cpp
    Sound.cpp
    Input.cpp
    )

#set (INTERNAL_LIBRARIES ${INTERNAL_LIBRARIES}
#    crgame
#    crengine
#    crmath
#    )

SET(LIBRARY_HEADERS
    include/Engine.h
    )
ADD_LIBRARY(${LIBRARY} SHARED ${LIBRARY_SRCS} ${LIBRARY_HEADERS})

TARGET_LINK_LIBRARIES(${LIBRARY}
    ${INTERNAL_LIBRARIES}
    ${MYSQL_LIBRARIES}
    ${MYSQLPP_LIBRARIES}
    ${CRYPTOPP_LIBRARIES}
    ${LIBEVENT_LIBRARIES}
    ${LIBXML2_LIBRARIES}
    ${LIBINTL_LIBRARIES}
    ${Boost_LIBRARIES}
    ${EXTRA_LIBRARIES})

#INSTALL(TARGETS jazzd RUNTIME DESTINATION ${PKG_BINDIR})
#INSTALL(FILES ${JAZZ_HEADERS} DESTINATION include)

