FIND_PACKAGE(OpenGL REQUIRED)
FIND_PACKAGE(GLUT REQUIRED)


INCLUDE_DIRECTORIES(
    ${CMAKE_CURRENT_SOURCE_DIR}
    ${CMAKE_CURRENT_SOURCE_DIR}/include
    ${CMAKE_CURRENT_SOURCE_DIR}/game/include
    ${CMAKE_CURRENT_SOURCE_DIR}/engine/include
    ${CMAKE_CURRENT_SOURCE_DIR}/math/include
    ${PNG_INCLUDE_DIR}
    )

SET (PROGRAMS fog)

SET(PROGRAM_SRCS
    fog.cpp
    glm.cpp
    )

ADD_EXECUTABLE(${PROGRAMS} ${PROGRAM_SRCS})

   
TARGET_LINK_LIBRARIES(${PROGRAMS}
    ${EXTRA_LIBRARIES}
    ${OPENGL_LIBRARIES}
    ${GLUT_LIBRARY}
    )


SET (PROGRAMS1 lightmaterial)

SET(PROGRAM1_SRCS
    lightmaterial.cpp
    glm.cpp
    )

ADD_EXECUTABLE(${PROGRAMS1} ${PROGRAM1_SRCS})

   
TARGET_LINK_LIBRARIES(${PROGRAMS1}
    ${EXTRA_LIBRARIES}
    ${OPENGL_LIBRARIES}
    ${GLUT_LIBRARY}
    )

SET (PROGRAMS2 lightposition)

SET(PROGRAM2_SRCS
    lightposition.cpp
    glm.cpp
    )

ADD_EXECUTABLE(${PROGRAMS2} ${PROGRAM2_SRCS})

   
TARGET_LINK_LIBRARIES(${PROGRAMS2}
    ${EXTRA_LIBRARIES}
    ${OPENGL_LIBRARIES}
    ${GLUT_LIBRARY}
    )

SET (PROGRAMS3 projection)

SET(PROGRAM3_SRCS
    projection.cpp
    glm.cpp
    )

ADD_EXECUTABLE(${PROGRAMS3} ${PROGRAM3_SRCS})

   
TARGET_LINK_LIBRARIES(${PROGRAMS3}
    ${EXTRA_LIBRARIES}
    ${OPENGL_LIBRARIES}
    ${GLUT_LIBRARY}
    )

SET (PROGRAMS4 shapes)

SET(PROGRAM4_SRCS
    shapes.cpp
    glm.cpp
    )

ADD_EXECUTABLE(${PROGRAMS4} ${PROGRAM4_SRCS})

   
TARGET_LINK_LIBRARIES(${PROGRAMS4}
    ${EXTRA_LIBRARIES}
    ${OPENGL_LIBRARIES}
    ${GLUT_LIBRARY}
    )


SET (PROGRAMS5 texture)

SET(PROGRAM5_SRCS
    texture.cpp
    glm.cpp
    )

ADD_EXECUTABLE(${PROGRAMS5} ${PROGRAM5_SRCS})

   
TARGET_LINK_LIBRARIES(${PROGRAMS5}
    ${EXTRA_LIBRARIES}
    ${OPENGL_LIBRARIES}
    ${GLUT_LIBRARY}
    )

SET (PROGRAMS6 transformation)

SET(PROGRAM6_SRCS
    transformation.cpp
    glm.cpp
    )

ADD_EXECUTABLE(${PROGRAMS6} ${PROGRAM6_SRCS})

   
TARGET_LINK_LIBRARIES(${PROGRAMS6}
    ${EXTRA_LIBRARIES}
    ${OPENGL_LIBRARIES}
    ${GLUT_LIBRARY}
    )


#INSTALL(TARGETS ${PROGRAMS} RUNTIME DESTINATION ${PKG_BINDIR})

