FIND_PACKAGE(OpenGL REQUIRED)
FIND_PACKAGE(GLUT REQUIRED)
FIND_PACKAGE(GLEW REQUIRED)
FIND_PACKAGE(PNG REQUIRED)
FIND_PACKAGE(JPEG REQUIRED)


INCLUDE_DIRECTORIES(
    ${CMAKE_CURRENT_SOURCE_DIR}
    ${CMAKE_CURRENT_SOURCE_DIR}/include
    ${CMAKE_CURRENT_SOURCE_DIR}/game/include
    ${CMAKE_CURRENT_SOURCE_DIR}/engine/include
    ${CMAKE_CURRENT_SOURCE_DIR}/math/include
    ${PNG_INCLUDE_DIR}
    )

SET (PROGRAMS gpu_cloth)

SET(PROGRAM_SRCS
    buffer.cpp
    font.cpp
    glapp.cpp
    main.cpp
    pbuffer.cpp
    shader.cpp
    texture.cpp
    utils.cpp
    )

ADD_EXECUTABLE(${PROGRAMS} ${PROGRAM_SRCS})

   
TARGET_LINK_LIBRARIES(${PROGRAMS}
    ${EXTRA_LIBRARIES}
    ${OPENGL_LIBRARIES}
    ${GLUT_LIBRARY}
    ${GLEW_LIBRARY}
    ${PNG_LIBRARY}
    ${JPEG_LIBRARY}
    )

#INSTALL(TARGETS ${PROGRAMS} RUNTIME DESTINATION ${PKG_BINDIR})


